# bryndza

./: .gitignore  Cargo.toml  LICENSE  MACOS_IMPLEMENTATION_STATUS.md  README.md
benches/: element_location.rs
docs/: api_reference.md  getting_started.md
docs/platform_guides/: android.md  ios.md  macos.md  windows.md
examples/: basic_desktop.rs  green_wallet_test.rs  mobile_app.rs
src/: config.rs  error.rs  lib.rs  session.rs
src/element/: element.rs  interaction.rs  locator.rs  mod.rs
src/platform/: mod.rs
src/platform/android/: adb.rs  element.rs  mod.rs
src/platform/ios/: element.rs  mod.rs  xctest.rs
src/platform/macos/: connection.rs  element.rs  mod.rs
src/platform/windows/: connection.rs  element.rs  mod.rs
src/utils/: image.rs  mod.rs  screenshot.rs
src/wait/: conditions.rs  mod.rs  strategy.rs
tests/: mod.rs
tests/fixtures/: test_app.sh
tests/fixtures/sample_images/: README.md
tests/integration/: desktop_tests.rs  mobile_tests.rs  mod.rs
