[package]
name = "bryndza"
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["@knnmran"]
description = "Cross-platform desktop and mobile automation library"
repository = "https://github.com/knnmran/bryndza"
readme = "README.md"
keywords = ["automation", "testing", "ui", "desktop", "mobile"]
categories = ["development-tools::testing", "api-bindings"]

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
async-trait = "0.1"
image = "0.24"
screenshots = "0.8"
uuid = { version = "1.0", features = ["v4"] }
futures = "0.3"
chrono = { version = "0.4", features = ["serde"] }
winit = { version = "0.28", optional = true }
winapi = { version = "0.3", optional = true }
core-foundation = { version = "0.9", optional = true }
objc = { version = "0.2", optional = true }
jni = { version = "0.21", optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tokio-test = "0.4"

[features]
default = []
windows = ["winit", "winapi"]
macos = ["core-foundation", "objc"]
android = ["jni"]
ios = []

[[bench]]
name = "element_location"
harness = false
